--- a/jazz.html
+++ b/jazz.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
     <script
         src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -14,16 +12,23 @@
 
     <link rel='stylesheet' href='css/style.css'>
 
-    <title>Ambisonic Audio | Percussion</title>
+    <title>Ambisonic Audio</title>
 </head>
+
 <body>
     <div id='nav'></div>
 
-    <hl>Hello World</hl>
-    <p>I'm hosted with GitHub Pages.</p>
-    <p>Noah's</p>
+    <div style="width: 80%; margin: 50px 0 0 50px;">
+        <table class='table table-striped'>
+            <thead>
+                <tr><h1 id='jazz-combo-header'>Jazz Combo</h1><br></tr>
+            </thead>
+            <tbody id="jazz-combo"></tbody>
+        </table>
+    </div>
 
     <script src='document.js'></script>
+
+    <script src='content/jazz_combo.js'></script>
 </body>
-</html>
 
