--- a/speaking.html
+++ b/speaking.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
     <script
         src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -14,16 +12,22 @@
 
     <link rel='stylesheet' href='css/style.css'>
 
-    <title>Ambisonic Audio | Percussion</title>
+    <title>Ambisonic Audio | Directional Speaking</title>
 </head>
+
 <body>
     <div id='nav'></div>
 
-    <hl>Hello World</hl>
-    <p>I'm hosted with GitHub Pages.</p>
-    <p>Noah's</p>
+    <div style="width: 80%; margin: 50px 0 0 50px;">
+        <h1>Directional Speaking</h1>
+        <br>
+        <table class='table table-striped'>
+            <tbody id="directional-speaking"></tbody>
+        </table>
+    </div>
 
     <script src='document.js'></script>
+    
+    <script src='content/directional_speaking.js'></script>
 </body>
-</html>
 
