--- a/jazz.html
+++ b/jazz.html
@@ -12,18 +12,25 @@
 
     <link rel='stylesheet' href='css/style.css'>
 
-    <title>Ambisonic Audio</title>
+    <title>Ambisonic Audio | Jazz</title>
 </head>
 
 <body>
     <div id='nav'></div>
 
-    <div style="width: 80%; margin: 50px 0 0 50px;">
+    <div class='content'>
+        <h1>Jazz</h1>
+        <hr><br>
+
+        <h3>Elevator Music</h3><br>
         <table class='table table-striped'>
-            <thead>
-                <tr><h1 id='jazz-combo-header'>Jazz Combo</h1><br></tr>
-            </thead>
-            <tbody id="jazz-combo"></tbody>
+            <tbody id="jazz-elevator"></tbody>
+        </table>
+
+        <br><br>
+        <h3>Platz Combo</h3><br>
+        <table class='table table-striped'>
+            <tbody id="jazz-platz"></tbody>
         </table>
     </div>
 
