--- a/speaking.html
+++ b/speaking.html
@@ -18,11 +18,37 @@
 <body>
     <div id='nav'></div>
 
-    <div style="width: 80%; margin: 50px 0 0 50px;">
-        <h1>Directional Speaking</h1>
-        <br>
+    <div class='content'>
+        <h1>Directional Sound</h1>
+        <hr><br>
+
+        <h3>Between Directions</h3><br>
         <table class='table table-striped'>
-            <tbody id="directional-speaking"></tbody>
+            <tbody id="directional-between"></tbody>
+        </table>
+
+        <br><br>
+        <h3>Directional Drums</h3><br>
+        <table class='table table-striped'>
+            <tbody id="directional-drums"></tbody>
+        </table>
+
+        <br><br>
+        <h3>Forward Backwards</h3><br>
+        <table class='table table-striped'>
+            <tbody id="directional-forward-backward"></tbody>
+        </table>
+
+        <br><br>
+        <h3>Footsteps</h3><br>
+        <table class='table table-striped'>
+            <tbody id="directional-footstep"></tbody>
+        </table>
+
+        <br><br>
+        <h3>Left, Right, Front, Back</h3><br>
+        <table class='table table-striped'>
+            <tbody id="directional-left"></tbody>
         </table>
     </div>
 
