--- a/percussion.html
+++ b/percussion.html
@@ -13,27 +13,30 @@
     <link rel='stylesheet' href='css/style.css'>
 
     <title>Ambisonic Audio | Percussion</title>
-
-    <style>
-        .table tr td {
-            min-width: 200px;
-        }
-
-        .btn {
-            min-width: 100%;
-        }
-    </style>
 </head>
 
 <body>
     <div id='nav'></div>
 
-    <div style="width: 80%; margin: 50px 0 0 50px;">
+    <div class='content'>
+        <h1>Percussion</h1>
+        <hr><br>
+
+        <h3>Guiro</h3><br>
         <table class='table table-striped'>
-            <thead>
-                <tr><h2 id='jazz-combo-header'>Percussion</h2></tr>
-            </thead>
-            <tbody id="percussion"></tbody>
+            <tbody id="percussion-guiro"></tbody>
+        </table>
+
+        <br><br>
+        <h3>Maracca</h3><br>
+        <table class='table table-striped'>
+            <tbody id="percussion-maracca"></tbody>
+        </table>
+
+        <br><br>
+        <h3>Timbales</h3><br>
+        <table class='table table-striped'>
+            <tbody id="percussion-timbales"></tbody>
         </table>
     </div>
 
