[SOUNDS] Added Sound Files with Basic Names. No Desc

--- a/speaking.html
+++ b/speaking.html
@@ -8,6 +8,7 @@
     
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
 
+    <script src='https://cdn.jsdelivr.net/npm/howler@2.2.1/dist/howler.min.js'></script>
     <script src='sounds.js'></script>
 
     <link rel='stylesheet' href='css/style.css'>
@@ -28,7 +29,7 @@
         </table>
 
         <br><br>
-        <h3>Directional Drums</h3><br>
+        <h3>"Drums"</h3><br>
         <table class='table table-striped'>
             <tbody id="directional-drums"></tbody>
         </table>
@@ -51,6 +52,7 @@
             <tbody id="directional-left"></tbody>
         </table>
     </div>
+    <br><br><br>
 
     <script src='document.js'></script>
     
