--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body style='overflow: hidden;'>
     <div id='nav'></div>
 
-    <div class="embed-responsive embed-responsive-1by1" style="bottom: 0.95em">
+    <div class="embed-responsive embed-responsive-1by1" style="top: 3.5em; position: absolute; bottom: 0; height: 93.97vh !important;">
         <iframe src='./Thesis_draft.pdf'></iframe>
     </div>
 
