[THESIS] Added thesis-final./
1. With this, the thesis report should be finished.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id='nav'></div>
 
     <div class="embed-responsive embed-responsive-1by1" style="top: 3.5em; position: absolute; bottom: 0; height: 93.97vh !important;">
-        <iframe src='./Thesis_draft.pdf'></iframe>
+        <iframe src='./thesis-final.pdf'></iframe>
     </div>
 
     <script src='document.js'></script>
