[PLATZ] Added Jazz Combo

--- a/jazz.html
+++ b/jazz.html
@@ -28,6 +28,10 @@
         </table>
 
        <br><br>
+       <h3>Platz Combo</h3><br>
+        <table class='table table-striped'>
+            <tbody id="jazz-platz"></tbody>
+        </table>
     </div>
 
     <script src='document.js'></script>
